templates/identity_template.yaml
---
# Source: identity/templates/service.yaml
# SPDX-FileCopyrightText: 2021 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: default
  labels:
    app: identity
    chart: "identity-3.0.0"
    release: "release-name"
    heritage: "Helm"
spec:
  ports:
    - port: 5556
      targetPort: 5556
      protocol: TCP
      name: http
  selector:
    app: identity
    release: release-name
  type: ClusterIP
  sessionAffinity: None
---
# Source: identity/templates/deployment.yaml
# SPDX-FileCopyrightText: 2021 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  namespace: default
  labels:
    app: identity
    chart: "identity-3.0.0"
    release: "release-name"
    heritage: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
      release: "release-name"
  template:
    metadata:
      annotations:
        checksum/configmap-identity-config: f28160bd7096c904d2b4b4c4b987d2f71b39bef0eb3c817232bc117a4d054b1f
      labels:
        app: identity
        release: release-name
    spec:
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            items:
            - key: config.yaml
              path: config.yaml
            name: identity-configmap
      serviceAccountName: identity
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
      containers:
        - name: dex
          command:
            - /usr/local/bin/dex
            - serve
            - /etc/dex/config.yaml
          image: "ghcr.io/dexidp/dex:v2.35.3-distroless"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/healthz"
              port: 5556
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 5556
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/dex
            name: config
---
# Source: identity/templates/ingress.yaml
# SPDX-FileCopyrightText: 2021 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-ingress
  namespace: default
  labels:
    app: identity
    chart: "identity-3.0.0"
    release: "release-name"
    heritage: "Helm"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  tls:
    - secretName: identity-tls
      hosts:
        - identity.ingress.example.org
  rules:
    - host: identity.ingress.example.org
      http:
        paths:
          - backend:
              service:
               name: identity-service
               port:
                 number: 5556
            path: "/"
            pathType: Prefix
---
# Source: identity/templates/secret-kubeconfig.yaml
# SPDX-FileCopyrightText: 2021 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0
